--- a/methodology.Rmd
+++ b/methodology.Rmd
@@ -124,50 +124,22 @@ loyalty_loc_vol_line <- shared_data %>%
   layout(xaxis = list(title = "Date", showgrid = TRUE, showticklabels = TRUE), 
          yaxis = list(title = "Transaction volume"))
 
-bscols(widths = c(14,14), loyalty_loc_vol_bar, loyalty_loc_vol_line)
-```
-
-```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Bar Chart of loyalty card transaction volume per location cross-linked with line chart"}
-##Volume from loyalty card dataset by date- linked
-
-library(crosstalk)
-
-shared_data <- SharedData$new(loyalty_data_cleaned, key = ~location)
-
-loyalty_loc_vol_bar <- shared_data %>%
-  plot_ly() %>% 
-  group_by(location) %>%
-  summarise(txn_count = n()) %>%
-  arrange(desc(txn_count)) %>%
-  add_bars(x = ~txn_count, y = ~location, type = "bar", hoverinfo = "text", 
-          text = ~paste("Location:", location,
-                        "<br>Transaction Volume:", txn_count)) %>%
-  layout(title = "Loyalty card transaction Volume by Location", xaxis = list(title = "Transaction Volume", 
-         zeroline = FALSE), yaxis = list(title = "Location", zeroline = FALSE, categoryorder = "array", dtick= 1, categoryarray = ~txn_count))
-
-loyalty_loc_vol_line <- shared_data %>% 
-  plot_ly() %>%
-  group_by(location, date) %>%
-  summarise(txn_count = n()) %>%
-  add_lines(x = ~date, y = ~txn_count, hoverinfo = "text", 
-          text = ~paste("Location:", location,
-                        "<br>Date:", date,
-                        "<br>Transaction Volume:", txn_count)) %>%
-  layout(xaxis = list(title = "Date", showgrid = TRUE, showticklabels = TRUE), 
-         yaxis = list(title = "Transaction volume"))
-
-bscols(widths = c(14,14), loyalty_loc_vol_bar, loyalty_loc_vol_line)
+bscols(widths = c(12,12), loyalty_loc_vol_bar, loyalty_loc_vol_line)
 ```
 
 ```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Bar Chart of credit card transaction volume per location cross-linked with line chart"}
 ##Volume from credit card dataset by date- linked
 
-shared_data_cc <- SharedData$new(cc_data_cleaned, key = ~location)
+cc_data_cleaned_grpcount <- cc_data_cleaned %>%
+  group_by(location, date) %>%
+  summarise(txn_count = n())
+
+shared_data_cc <- SharedData$new(cc_data_cleaned_grpcount, key = ~location)
 
 cc_data_loc_vol_bar <- shared_data_cc %>%
   plot_ly() %>% 
   group_by(location) %>%
-  summarise(txn_count = n()) %>%
+  summarise(txn_count = sum(txn_count)) %>%
   arrange(desc(txn_count)) %>%
   add_bars(x = ~txn_count, y = ~location, type = "bar", hoverinfo = "text", 
           text = ~paste("Location:", location,
@@ -177,8 +149,6 @@ cc_data_loc_vol_bar <- shared_data_cc %>%
 
 cc_loc_vol_line <- shared_data_cc %>% 
   plot_ly() %>%
-  group_by(location, date) %>%
-  summarise(txn_count = n()) %>%
   add_lines(x = ~date, y = ~txn_count, hoverinfo = "text", 
           text = ~paste("Location:", location,
                         "<br>Date:", date,
@@ -186,7 +156,7 @@ cc_loc_vol_line <- shared_data_cc %>%
   layout(xaxis = list(title = "Date", showgrid = TRUE, showticklabels = TRUE), 
          yaxis = list(title = "Transaction volume"))
 
-bscols(widths = c(14,14), cc_data_loc_vol_bar, cc_loc_vol_line)
+bscols(widths = c(12,12), cc_data_loc_vol_bar, cc_loc_vol_line)
 ```
 
 2) **Overview of transaction volume difference**- provide an overview of the difference in transaction volume across each location per day.
